[package]
name = "codetest"
version = "0.1.0"
edition="2021"
[dependencies]
proconio = "0.4.5"
itertools = "0.11.0"
itertools-num = "0.1.3"
rand = "0.8.5"
reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1.11.0", features = ["full"] }
serde = { version = "^1.0.130", features = ["derive"] }
serde_json = "^1.0.67"

[[bin]]
name = "hoge"
path = "./main.rs"